fix: smallcase layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,10 @@ body {
   @apply bg-background text-foreground;
 }
 
+*::-webkit-scrollbar{
+  display: none;
+}
+
 /* Font Classes */
 .poppins-thin {
   font-family: "Poppins", sans-serif;
